fix pre: letter-spacing & word-spacing

--- a/fix/style-fix.css
+++ b/fix/style-fix.css
@@ -58,4 +58,6 @@ code, kbd, samp, tt {
 
 pre {
 	font-family: Consolas;
+	letter-spacing: normal;
+	word-spacing: normal;
 }
